change relation between subJob and baisicJob